# MLOPs

./: .gitignore  README.md  mlflow.db  pyproject.toml
.github/workflows/: model_calibration.yml  model_calibration_on_push.yml  pytest.yml
API_Labs/FastAPI_Labs/: README.md  requirements.txt
API_Labs/FastAPI_Labs/model/: wine_model.pkl
API_Labs/FastAPI_Labs/src/: data.py  main.py  predict.py  train.py
Data_Labs/Apache_Beam_Labs/: README.md  pyproject.toml  requirements.txt
Data_Labs/Apache_Beam_Labs/outputs/: wordcount.csv
Data_Labs/Apache_Beam_Labs/src/: beam_text_stats.py  beam_wordcount.py
Docker_Labs/: README.md  main.py
Docker_Labs/Lab1/: Dockerfile  pyproject.toml
Docker_Labs/Lab1/src/: main.py  requirements.txt  test.py
Github_Labs/Lab2/: README.md  requirements.txt
Github_Labs/Lab2/metrics/: 20260211025449_metrics.json
Github_Labs/Lab2/models/: model_20260217024340_xgb_model.joblib
Github_Labs/Lab2/src/: evaluate_model.py  train_model.py
Github_Labs/Lab2/test/: test_pytest.py
Github_Labs/Lab2/workflows/: model_calibration_on_push.yml
Github_Labs/Lab4/: requirements.txt
Github_Labs/Lab4/src/: train_and_save_model.py
Github_Labs/Lab4/test/: test_pytest.py
MLFlow_Lab/Lab2/: README.md  requirements.txt  starter.ipynb
Model_Development/: README.md  Ray.ipynb  mlflow.db
