[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-cloud>=0.34.0",
    "google-cloud-storage>=3.8.0",
    "pandas>=3.0.0",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.3",
]
